# datasette-configure-fts

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
datasette_configure_fts/: __init__.py  app.py
datasette_configure_fts/templates/: configure_fts_database.html  configure_fts_index.html
tests/: test_configure_fts.py
